--- a/ElectronicVoting.csproj
+++ b/ElectronicVoting.csproj
@@ -10,6 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="BigInteger.NetCore" Version="1.0.0" />
       <PackageReference Include="fastJSON" Version="2.3.5.3" />
     </ItemGroup>
 
